# third_party_pulseaudio

./: .gitignore  .gitlab-ci.yml  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEWS  OAT.xml  PROTOCOL  PulseAudioConfig.cmake.in  PulseAudioConfigVersion.cmake.in  README  README.OpenSource  bundle.json  git-version-gen  libpulse-mainloop-glib.pc.in  libpulse-simple.pc.in  libpulse.pc.in  meson.build  meson_options.txt  pulseaudio.supp  test.patch  todo
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Guidelines.md
conf/: client.conf  daemon.conf  default.pa
coverity/: model.c
doc/: messaging_api.txt  stream_restore_fallback_table_example.table
doxygen/: .gitignore  doxygen.conf.in  meson.build
include/: config.h
include/log/: audio_log.h
include/pulse/: version.h
man/: .gitignore  default.pa.5.xml.in  esdcompat.1.xml.in  meson.build  pacat.1.xml.in  pacmd.1.xml.in  pactl.1.xml.in  padsp.1.xml.in  pasuspender.1.xml.in  pax11publish.1.xml.in  pulse-cli-syntax.5.xml.in  pulse-client.conf.5.xml.in  pulse-daemon.conf.5.xml.in  pulseaudio.1.xml.in  start-pulseaudio-x11.1.xml.in  xmltoman  xmltoman.css  xmltoman.dtd  xmltoman.xsl
ohosbuild/: BUILD.gn  ohos_paconfig.sh
ohosbuild/include/: ltdl.h
ohosbuild/src/: BUILD.gn
ohosbuild/src/daemon/: BUILD.gn
ohosbuild/src/modules/: BUILD.gn
ohosbuild/src/pulse/: BUILD.gn
ohosbuild/src/pulsecore/: BUILD.gn  ltdl_stub.c
ohosbuild/src/utils/: BUILD.gn
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  as.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  de_CH.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  meson.build  ml.po  mr.po  nl.po  nn.po  oc.po  (+18 more)
scripts/: benchmark_memory_usage.sh  generate-map-file.sh  plot_memory_usage.gp  save-tarball-version.sh
scripts/benchmarks/: .gitignore  README
shell-completion/bash/: meson.build  pactl
shell-completion/zsh/: _pulseaudio  meson.build
sonic/: BUILD.gn  Main.java  Makefile  README  README.OpenSource  Sonic.java  main.c  mkorig  sonic.1  sonic.c  sonic.h  wave.c  wave.h
sonic/debian/: changelog  changelog.vinux  control  copyright  libsonic-dev.install  libsonic0.install  libsonic0.symbols  rules  sonic.install  sonic.manpages  watch
sonic/doc/: index.md  post
sonic/samples/: README  test1.txt
speex/: BUILD.gn  INSTALL  Makefile.am  README  README.blackfin  SpeexDSP.spec.in  TODO  configure.ac  speexdsp.pc.in
speex/doc/: manual.lyx  sampledec.c  sampleenc.c
speex/libspeexdsp/: Makefile.am  arch.h  buffer.c  fftwrap.c  jitter.c  kiss_fftr.c  mdf.c  preprocess.c  resample.c  scal.c  testdenoise.c  testecho.c  testjitter.c  testresample.c  testresample2.c
speex/macosx/English.lproj/: InfoPlist.strings
speex/macosx/Speex.xcodeproj/: project.pbxproj
speex/macosx/Speex_UB.xcodeproj/: project.pbxproj
speex/ti/: Makefile.am
speex/tmv/: _kiss_fft_guts_tm.h
speex/win32/VS2005/: libspeexdsp.sln
speex/win32/libspeexdsp/: Makefile.am
src/: .gitignore  depmod.py  meson.build
src/daemon/: .gitignore  caps.c  caps.h  cmdline.c  cmdline.h  cpulimit.c  cpulimit.h  daemon-conf.c  daemon-conf.h  daemon.conf.in  default.pa.in  dumpmodules.c  dumpmodules.h  esdcompat.in  ltdl-bind-now.c  ltdl-bind-now.h  main.c  meson.build  ohos_daemon-conf.c  ohos_pa_main.c  pulseaudio-system.conf  pulseaudio.desktop.in  server-lookup.c  server-lookup.h  start-pulseaudio-x11.in  system.pa.in
src/modules/: ladspa.h  meson.build  module-allow-passthrough.c  module-always-sink.c  module-always-source.c  module-augment-properties.c  module-card-restore.c  module-cli.c  module-combine-sink.c  module-combine.c  module-console-kit.c  module-default-device-restore.c  module-detect.c  module-devd-detect.c  module-device-manager.c  module-device-restore.c  module-equalizer-sink.c  module-esound-compat-spawnfd.c  module-esound-compat-spawnpid.c  module-esound-sink.c  module-filter-apply.c  module-filter-heuristics.c  module-hal-detect-compat.c  module-intended-roles.c  module-ladspa-sink.c  module-lirc.c  module-loopback.c  module-match.c  module-mmkbd-evdev.c  module-native-protocol-fd.c  module-null-sink.c  module-null-source.c  module-pipe-sink.c  module-pipe-source.c  module-position-event-sounds.c  module-protocol-stub.c  module-remap-sink.c  module-remap-source.c  module-rescue-streams.c  module-role-cork.c  (+35 more)
src/pulse/: .gitignore  cdecl.h  channelmap.c  channelmap.h  client-conf-x11.c  client-conf-x11.h  client-conf.c  client-conf.h  client.conf.in  context.c  context.h  def.h  direction.c  direction.h  error.c  error.h  ext-device-manager.c  ext-device-manager.h  ext-device-restore.c  ext-device-restore.h  ext-stream-restore.c  ext-stream-restore.h  fork-detect.c  fork-detect.h  format.c  format.h  gccmacro.h  glib-mainloop.c  glib-mainloop.h  internal.h  introspect.c  introspect.h  libpulse.def  mainloop-api.c  mainloop-api.h  mainloop-signal.c  mainloop-signal.h  mainloop.c  mainloop.h  map-file  (+33 more)
src/pulsecore/: arpa-inet.c  arpa-inet.h  asyncmsgq.c  asyncmsgq.h  asyncq.c  asyncq.h  atomic.h  aupdate.c  aupdate.h  auth-cookie.c  auth-cookie.h  authkey.c  authkey.h  avahi-wrap.c  avahi-wrap.h  bitset.c  bitset.h  card.c  card.h  channelMix.h  cli-command.c  cli-command.h  cli-text.c  cli-text.h  cli.c  cli.h  client.c  client.h  conf-parser.c  conf-parser.h  core-error.c  core-error.h  core-format.c  core-format.h  core-rtclock.c  core-rtclock.h  core-scache.c  core-scache.h  core-subscribe.c  core-subscribe.h  (+235 more)
src/tests/: alsa-mixer-path-test.c  alsa-time-test.c  asyncmsgq-test.c  asyncq-test.c  atomic-test.c  channelmap-test.c  close-test.c  connect-stress.c  core-util-test.c  cpu-mix-test.c  cpu-remap-test.c  cpu-sconv-test.c  cpu-volume-test.c  cpulimit-test.c  extended-test.c  flist-test.c  format-test.c  get-binary-name-test.c  gtk-test.c  hashmap-test.c  (+45 more)
subprojects/: webrtc-audio-processing.wrap
vala/: libpulse-mainloop-glib.vapi  libpulse-simple.deps  libpulse-simple.vapi  libpulse.vapi  meson.build
(+229 files in other folders)
