# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("pulseaudio_packages") {
  deps = [
    "../sonic:sonic",
    "src:pa_client_config",
    "src:pa_daemon_config",
    "src:pa_default_config",
    "src:pulsecommon",
    "src/daemon:pulseaudio",
    "src/modules:native-modules",
    "src/pulse:pulse",
    "src/pulse:pulse-simple",
    "src/pulsecore:cli",
    "src/pulsecore:protocol-cli",
    "src/pulsecore:protocol-native",
    "src/pulsecore:pulsecore",
  ]
  if (build_variant == "root") {
    deps += [
      "src/utils:pacmd",
      "src/utils:pactl",
    ]
  }
}

action("gen_config_header") {
  script = "ohos_paconfig.sh"

  args = [
    rebase_path("//third_party/pulseaudio", root_build_dir),
    rebase_path("${target_gen_dir}/", root_build_dir),
  ]

  outputs = [ "${target_gen_dir}/config.h" ]
}
