# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("speex_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "libspeexdsp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
  ]
}

ohos_source_set("speex_sources") {
  sources = [ "libspeexdsp/resample.c" ]

  configs = [ ":speex_config" ]
  subsystem_name = "thirdparty"
  part_name = "pulseaudio"
}

config("speexresampler_header") {
  include_dirs = [ "//third_party/pulseaudio/speex/include" ]
}

ohos_shared_library("speexresampler") {
  deps = [ ":speex_sources" ]
  innerapi_tags = [
    "chipsetsdk_indirect",
    "platformsdk_indirect",
  ]

  public_configs = [ ":speexresampler_header" ]
  subsystem_name = "thirdparty"
  part_name = "pulseaudio"
}
