# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("daemon_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../include",
    "../../../include",
    "../../../src/daemon",
    "../../../src",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-unused-function",
    "-DHAVE_CONFIG_H",
    "-DHAVE_UNISTD_H",
  ]
}

ohos_source_set("pulseaudio_sources") {
  sources = [
    "../../../src/daemon/caps.c",
    "../../../src/daemon/cmdline.c",
    "../../../src/daemon/cpulimit.c",
    "../../../src/daemon/ohos_daemon-conf.c",
    "../../../src/daemon/ohos_pa_main.c",
  ]

  configs = [ ":daemon_config" ]
  external_deps = [ "hilog:libhilog" ]
  part_name = "pulseaudio"
  subsystem_name = "thirdparty"
}

ohos_shared_library("pulseaudio") {
  ldflags = [ "-ffast-math" ]
  deps = [
    ":pulseaudio_sources",
    "../../src:pulsecommon",
    "../../src/pulse:pulse",
    "../../src/pulsecore:pulsecore",
  ]

  external_deps = [ "hilog:libhilog" ]

  part_name = "pulseaudio"
  subsystem_name = "thirdparty"
}
